@@ -105,7 +105,7 @@ class FakeTranslator:
         return ('translated:' + msg).decode('iso-8859-15')
 
 class FakeLocalizer:
-    default = FakeTranslator() 
+    default = FakeTranslator()
 
 
 class FakePortal(Folder):
@@ -136,6 +136,7 @@ class FakePortal(Folder):
     portal_webmail.default_connection_params['maildir'] = (maildir_path, -1)
     portal_webmail.default_connection_params['read_only_folders'] = ('', 1)
     portal_webmail.default_connection_params['protected_folders'] = ('INBOX.Sent', 1)
+    portal_webmail.default_connection_params['webmail_enabled'] = ('webmail_enabled:1', -1)
 
     def getPhysicalPath(self):
         return ('', 'nowhere')
